[gd_scene load_steps=3 format=3 uid="uid://cmv168mgurrlp"]

[ext_resource type="Script" path="res://source/client/ui/chat/chat.gd" id="1_hxcw4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl2eg"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.839216)

[node name="Chat" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hxcw4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 245.0

[node name="MessageDisplay" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nl2eg")
bbcode_enabled = true

[node name="MessageEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter your message here"

[node name="FadeOutTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="text_submitted" from="VBoxContainer/MessageEdit" to="." method="_on_message_submitted"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
